--- a/style.css
+++ b/style.css
@@ -5,7 +5,56 @@
 }
 
 body{
-    background: rgb(218, 218, 218);
+    background: rgb(157, 157, 157);
     height: 100vh;
     display: flex;
+}
+
+
+.contenedor{
+    width: 920px;
+    height: 280px;
+    margin: 0 auto;
+    background-color: white;
+    position: relative;
+}
+
+.dino{
+    width: 81px;
+    height: 84px;
+    position: absolute;
+    bottom: 22px;
+    left: 40px;
+    z-index: 2;
+
+    background: url(img/dino.png) repeat-x 0px 0px;
+    background-size: 336px 84px;
+    background-position-x: 0px;
+}
+
+.dino-corriendo{
+    animation: animarDino 0.25s steps(2) infinite;
+}
+
+.dino-chocado{
+    background-position-x: -252px;
+}
+
+.suelo{
+    width: 200%;
+    height: 42px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    background: url(img/suelo.png);
+    background-size: 50% 42px;
+}
+
+@keyframes animarDino{
+    from{
+        background-position-x:-84px ;
+    }to{
+        background-position-x:-252px ;
+    }
 }
