--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body{
     margin: 0 auto;
     background-color: white;
     position: relative;
+    overflow: hidden;
+   
 }
 
 .dino{
@@ -47,7 +49,7 @@ body{
     bottom: 0;
     left: 0;
 
-    background: url(img/suelo.png);
+    background: url(img/suelo.png) repeat-x 0px 0px;
     background-size: 50% 42px;
 }
 
