--- a/style.css
+++ b/style.css
@@ -1,100 +1,97 @@
-*{
-    margin: 0px;
-    padding: 0px;
-
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
-body{
-    background: rgb(157, 157, 157);
-    height: 100vh;
-    display: flex;
+body {
+  background: rgb(157, 157, 157);
+  height: 100vh;
+  display: flex;
 }
 
-
-.contenedor{
-    width: 920px;
-    height: 280px;
-    margin: 0 auto;
-    background-color: white;
-    position: relative;
-    overflow: hidden;
-   
+.contenedor {
+  width: 920px;
+  height: 280px;
+  margin: 0 auto;
+  background-color: white;
+  position: relative;
+  overflow: hidden;
 }
 
-.game-over{
-    color:red;
-   display: none;
-   font-family: monospace;
-   font-size: 40px;
-   position: absolute;
-   right: calc(47% - 50px);
-   top: calc(15% - 50px);
-   z-index: 2;
+.game-over {
+  color: red;
+  display: none;
+  font-family: monospace;
+  font-size: 40px;
+  position: absolute;
+  right: calc(47% - 50px);
+  top: calc(15% - 50px);
+  z-index: 2;
 }
 
-.score{
-    width: 100px;
-    height: 30px;
+.score {
+  width: 100px;
+  height: 30px;
 
-    position: absolute;
-    top: 5px;
-    right: 15px;
-    z-index: 10;
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  z-index: 10;
 
-    color:red;
-    font-family: Verdana;
-    font-size: 30px;
+  color: red;
+  font-family: Verdana;
+  font-size: 30px;
 
-    text-align: right;
+  text-align: right;
 }
 
-.dino{
-    width: 81px;
-    height: 84px;
-    position: absolute;
-    bottom: 22px;
-    left: 40px;
-    z-index: 2;
+.dino {
+  width: 81px;
+  height: 84px;
+  position: absolute;
+  bottom: 22px;
+  left: 40px;
+  z-index: 2;
 
-    background: url(img/dino.png) repeat-x 0px 0px;
-    background-size: 336px 84px;
-    background-position-x: 0px;
+  background: url(img/dino.png) repeat-x 0px 0px;
+  background-size: 336px 84px;
+  background-position-x: 0px;
 }
 
-.dino-corriendo{
-    animation: animarDino 0.25s steps(2) infinite;
+.dino-corriendo {
+  animation: animarDino 0.25s steps(2) infinite;
 }
 
-.dino-chocado{
+.dino-chocado {
+  background-position-x: -252px;
+}
+
+.suelo {
+  width: 200%;
+  height: 42px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  background: url(img/suelo.png) repeat-x 0px 0px;
+  background-size: 50% 42px;
+}
+
+@keyframes animarDino {
+  from {
+    background-position-x: -84px;
+  }
+  to {
     background-position-x: -252px;
+  }
 }
 
-.suelo{
-    width: 200%;
-    height: 42px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-
-    background: url(img/suelo.png) repeat-x 0px 0px;
-    background-size: 50% 42px;
-}
-
-@keyframes animarDino{
-    from{
-        background-position-x:-84px ;
-    }to{
-        background-position-x:-252px ;
-    }
-}
-
-
-.cactus{
-    width: 45px;
-    height: 95px;
-    position: absolute;
-    bottom: 16px;
-    left: 600px;
-    z-index: 1;
-    background:url(img/cactus1.png) no-repeat;
+.cactus {
+  width: 45px;
+  height: 95px;
+  position: absolute;
+  bottom: 16px;
+  left: 600px;
+  z-index: 1;
+  background: url(img/cactus1.png) no-repeat;
 }
